# PracticePilot

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.ragatouille/colbert/indexes/attention/: 0.codes.pt  0.metadata.json  0.residuals.pt  avg_residual.pt  buckets.pt  centroids.pt  collection.json  doclens.0.json  ivf.pid.pt  metadata.json  pid_docid_map.json  plan.json
.streamlit/: config.toml
src/practice_pilot/: main.py  params.py  streamlit_app.py
src/practice_pilot/automation/: git_merge.py  git_push.py
src/practicepilot/: list_docs.py  main.py  params.py  pinecone_module.py  query_module.py  semantic_chunker.py  streamlit_app.py  upload.py  utils.py
src/practicepilot/automation/: git_merge.py  git_push.py
